option(MESSAGES "if activated the binaries will contain error messages, but for embedded systems this is not needed and can be turned off to save memory" ON)
if(MESSAGES)
    add_definitions(-DMESSAGES)
endif()

add_subdirectory(util)
if(VERIFIER)
    add_subdirectory(verifier)
endif()
if(PROOFER)
    add_subdirectory(proofer)
endif()
if(CLI)
    add_subdirectory(cli)
endif()
