# Erforderlich f端r FetchContent
include(FetchContent)

# Definiere das FetchContent-Objekt f端r Unity
FetchContent_Declare(
    unity
    GIT_REPOSITORY https://github.com/ThrowTheSwitch/Unity.git
    GIT_TAG v2.5.2  # Verwende die gew端nschte Unity-Version
)

# Lade und bereite Unity vor
FetchContent_MakeAvailable(unity)

# F端ge das Verzeichnis mit den Unit-Tests hinzu
add_subdirectory(unittests)