# Erforderlich f端r FetchContent
include(FetchContent)

# Definiere das FetchContent-Objekt f端r Unity
FetchContent_Declare(
    unity
    GIT_REPOSITORY https://github.com/ThrowTheSwitch/Unity.git
    GIT_TAG v2.5.2  # Verwende die gew端nschte Unity-Version
)

# Lade und bereite Unity vor
FetchContent_MakeAvailable(unity)

# Suppress MSVC warning C4711 for unity target
if(MSVC)
    target_compile_options(unity PRIVATE 
        /wd4711 # automatic inline expansion
        /wd4061 # enumerator in switch of enum is not explicitly handled
        /wd5045 # Spectre mitigation info
    )
endif()

# F端ge das Verzeichnis mit den Unit-Tests hinzu
add_subdirectory(unittests)